2007-06-28  Sebastien Pouliot  <sebastien@ximian.com>  

	* MainWindow.cs: Memorize last folder used to load assemblies. Fix
	right-click on the treeview (to always show the right popup).
	Implement new refresh mechanism. 

2007-06-28  Sebastien Pouliot  <sebastien@ximian.com>

	* MainWindow.cs: Set page/focus on the newly created plugin.
	* gtk-gui/*: Stetic generated files.

2007-06-27  Sebastien Pouliot  <sebastien@ximian.com>

	* AssemblyInfo.cs: Updated for 0.2.
	* Config.cs, WorkingSet.cs: Deleted.
	* MainWindow.cs: Main Monoxide application.
	* Monoxide.mdp: Updated.
	* Monoxide.cs: Reduced to start the Gtk# main window.
	* Tab.cs: Tab page widget.
	* system-software-update_22.png: Addin Manager icon.
	* gtk-gui/*: Stetic generated files.

2006-10-17  Sebastien Pouliot  <sebastien@ximian.com>

	* AssemblyInfo.cs: New. Assembly information.
	* Config.cs: New. Configuration handler.
	* Monoxide.cs: New. Main UI and (too much) general logic.
	* monoxide.glade: New. Glade file for UI,
	* monoxide.gladep: New. Glade project file.
	* Monoxide.mdp: New. MonoDevelop project file for the GUI.
	* WorkingSet.cs: New. Class to handle a group of related assemblies 
	and plugins.